--- a/11_9_3_Activity.ipynb
+++ b/11_9_3_Activity.ipynb
@@ -394,15 +394,211 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "x9yIJer8n1-O"
+        "id": "x9yIJer8n1-O",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        },
+        "outputId": "976afc1e-04f3-48aa-85d6-9a3e37118d10"
       },
       "source": [
         "#Step 4\n",
         "X = pd.read_csv('segmentation data.csv')\n",
-        "\n"
+        "X.head()\n"
       ],
-      "execution_count": 3,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "          ID  Sex  Marital status  Age  Education  Income  Occupation  \\\n",
+              "0  100000001    0               0   67          2  124670           1   \n",
+              "1  100000002    1               1   22          1  150773           1   \n",
+              "2  100000003    0               0   49          1   89210           0   \n",
+              "3  100000004    0               0   45          1  171565           1   \n",
+              "4  100000005    0               0   53          1  149031           1   \n",
+              "\n",
+              "   Settlement size  \n",
+              "0                2  \n",
+              "1                2  \n",
+              "2                0  \n",
+              "3                1  \n",
+              "4                1  "
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-dd325052-46eb-4574-8dd7-50b73a170e0b\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>ID</th>\n",
+              "      <th>Sex</th>\n",
+              "      <th>Marital status</th>\n",
+              "      <th>Age</th>\n",
+              "      <th>Education</th>\n",
+              "      <th>Income</th>\n",
+              "      <th>Occupation</th>\n",
+              "      <th>Settlement size</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>100000001</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>67</td>\n",
+              "      <td>2</td>\n",
+              "      <td>124670</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>100000002</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>22</td>\n",
+              "      <td>1</td>\n",
+              "      <td>150773</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>100000003</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>49</td>\n",
+              "      <td>1</td>\n",
+              "      <td>89210</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>100000004</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>45</td>\n",
+              "      <td>1</td>\n",
+              "      <td>171565</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>100000005</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>53</td>\n",
+              "      <td>1</td>\n",
+              "      <td>149031</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dd325052-46eb-4574-8dd7-50b73a170e0b')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-dd325052-46eb-4574-8dd7-50b73a170e0b button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-dd325052-46eb-4574-8dd7-50b73a170e0b');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -425,7 +621,7 @@
       "metadata": {
         "id": "E8tjhVNTgaNX"
       },
-      "execution_count": 4,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -464,7 +660,7 @@
       "metadata": {
         "id": "sEuD2DqRh09-"
       },
-      "execution_count": 5,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -488,7 +684,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 421
         },
-        "outputId": "050d5a7e-b64d-410f-b009-8b9194b30cc0"
+        "outputId": "17681e4b-5e0b-469a-99d7-94efc23f6ed3"
       },
       "source": [
         "#Step 7\n",
@@ -496,7 +692,7 @@
         "# labels_ are assigned to every observation based on the cluster the observation is assigned to\n",
         "\n",
         "\n",
-        "db = DBSCAN().fit(X)\n",
+        "db = DBSCAN(eps = 1.46, min_samples = 5).fit(X)\n",
         "labels = pd.DataFrame(db.labels_)\n",
         "\n",
         "labels.rename(columns={0: \"cluster\"}, inplace=True)\n",
@@ -506,7 +702,7 @@
         "\n",
         "sns.lmplot('Age','Income', data=graph, hue='cluster', fit_reg=False)"
       ],
-      "execution_count": 6,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -520,11 +716,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.FacetGrid at 0x7f76ecdadd90>"
+              "<seaborn.axisgrid.FacetGrid at 0x7f76e8f68250>"
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 17
         },
         {
           "output_type": "display_data",
@@ -571,7 +767,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 421
         },
-        "outputId": "bb9fce24-1b1c-46eb-f796-d7cfc0180b66"
+        "outputId": "a998b193-e28f-4306-d058-53d406fcf2f4"
       },
       "source": [
         "#Step 8\n",
@@ -589,7 +785,7 @@
         "\n",
         "sns.lmplot('Age','Income', data=graph, hue='cluster', fit_reg=False)"
       ],
-      "execution_count": 7,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -603,11 +799,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<seaborn.axisgrid.FacetGrid at 0x7f76ea4e8190>"
+              "<seaborn.axisgrid.FacetGrid at 0x7f76e9035e90>"
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 16
         },
         {
           "output_type": "display_data",
