--- a/11_11_1_Activity.ipynb
+++ b/11_11_1_Activity.ipynb
@@ -392,7 +392,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 520
         },
-        "outputId": "6c515ded-d785-4016-a3ac-9d14bbe1159e"
+        "outputId": "9fee8359-f476-4763-9595-bb580188ee45"
       },
       "source": [
         "#Step 4\n",
@@ -402,7 +402,7 @@
         "\n",
         "frequent_itemsets"
       ],
-      "execution_count": 4,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -427,7 +427,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-33cf00eb-6fa8-47b1-a529-26fab1c8929d\">\n",
+              "  <div id=\"df-1ba8a802-b872-480e-88ef-b780da037701\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -530,7 +530,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-33cf00eb-6fa8-47b1-a529-26fab1c8929d')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1ba8a802-b872-480e-88ef-b780da037701')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -581,12 +581,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-33cf00eb-6fa8-47b1-a529-26fab1c8929d button.colab-df-convert');\n",
+              "          document.querySelector('#df-1ba8a802-b872-480e-88ef-b780da037701 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-33cf00eb-6fa8-47b1-a529-26fab1c8929d');\n",
+              "          const element = document.querySelector('#df-1ba8a802-b872-480e-88ef-b780da037701');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -609,7 +609,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 12
         }
       ]
     },
@@ -718,6 +718,21 @@
         "\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "def calculate_confidence(df, \n",
+        "df = the output from the apriori algorithm\n",
+        "itemset, frequency\n",
+        "\n",
+        "item_A = string representing your first item\n",
+        "item_B = string for the second item (e.x. \"milk\")\n",
+        "Goal: calculate confidence(A-->B)\n"
+      ],
+      "metadata": {
+        "id": "mb74lurJs8fL"
+      }
     }
   ]
 }
